fix(`.DS_Store`): avoid mac metadata

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 *_LOCAL_*.txt
 *_REMOTE_*.txt
 
+# Mac metadata
+.DS_Store
+
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
